--- a/feature-types.mdx
+++ b/feature-types.mdx
@@ -147,7 +147,8 @@ class Book:
 ## Vectors
 
 Features can be vectors (fixed sized arrays of floats), such as the output from an embedding model.
-Unlike list or set features, are compatible with [embedding functions](/docs/embeddings) and [nearest neighbor similarity search](/docs/nearest-neighbor).
+Unlike list or set features, vector features are compatible with [embedding functions](/docs/embeddings)
+and [nearest neighbor similarity search](/docs/vector-search).
 
 ```python
 from chalk.features import features, Vector
