--- a/fraud-2.mdx
+++ b/fraud-2.mdx
@@ -216,7 +216,7 @@ in the [docs](/docs/dataframe) and
 You might also notice that we've used an [`Enum`](/docs/feature-types#scalars) feature here.
 Chalk supports many feature types, including
 [`Enum`](/docs/feature-types#scalars),
-[collections](/docs/feature-types#collections),
+[lists and sets](/docs/feature-types#lists-and-sets),
 and [`@dataclasses`](/docs/feature-types#dataclass).
 
 
