Update setup instructions for Hex

--- a/notebook-setup.mdx
+++ b/notebook-setup.mdx
@@ -66,6 +66,10 @@ On [Hex](https://hex.tech), you can store the client ID and secret key using [se
 
 ![Hex Secrets](/img/HexSecrets.png)
 
+Select `Python 3.10` as the image under **Environment > Compute Profile**.
+
+![Hex Python Image](/img/HexPythonImage.png)
+
 The Chalk client can then be initialized referencing the variables directly
 
 ```python notebook.ipynb
