--- a/notebook-inline.mdx
+++ b/notebook-inline.mdx
@@ -24,13 +24,8 @@ class RocketEngine:
     thrust: float
 ```
 
-If we wanted to define a feature inline in a notebook cell, we could do so like this:
+If we wanted to define a feature inline in a notebook cell, we could do so using the underscore syntax below:
 
-```python notebook.ipynb
-RocketEngine.density: float = RocketEngine.mass / RocketEngine.volume
-```
-
-Alternatively, we can use the [Underscore](/docs/underscore) syntax:
 
 ```python notebook.ipynb
 RocketEngine.density: float = _.mass / _.volume
