--- a/resolver-inputs.mdx
+++ b/resolver-inputs.mdx
@@ -297,7 +297,7 @@ def fn(ts: User.transfers[Transfer.account.balance]) -> ...:
 
 ### Has-many through has-many
 
-Has-many relationships can be required through other has-many relationships:
+Has-many relationships can be required through other has-many relationships.
 
 For example, consider the following feature definitions for `User`, `Account`, and `Transaction`,
 where a user can have many accounts, each with many transactions.
