change docs to test

--- a/aws.mdx
+++ b/aws.mdx
@@ -9,7 +9,7 @@ import { AwsIntegration } from '@/components/shared/aws'
 
 You can provide Chalk with an [AWS Access Key](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html) to use AWS-specific integrations (like [Redshift](/docs/redshift)) and [S3 Cloud Storage](/docs/s3).
 
-In your settings page, you'll find a form for adding your credentials:
+In the settings page, you'll find a form for adding your credentials:
 
 <AwsIntegration onSubmit={(e) => e.preventDefault()} />
 
