--- a/debugging-queries.mdx
+++ b/debugging-queries.mdx
@@ -4,39 +4,115 @@ description: Learn techniques for debugging online and offline queries
 ---
 
 Online and offline queries can fuse data from multiple sources, and the structure of how data flows
-through queries can be complex. Chalk has a number of tools to help you debug queries.
+through queries can be complex. Chalk has a number of tools to help you debug queries. In this section, we'll
+explore how to use these tools on a few simple features and resolvers.
+
+First, we'll define our feature classes. We'll work with a `User` and a `Transaction` object, representing
+users performing financial transactions. In this scenario, we'll write a simple aggregation that has a bug
+in its definition, and explore various ways to debug that issue.
+
+```python
+from datetime import datetime
+from chalk import features
+
+@features
+class Transaction:
+    id: int
+    user_id: int
+    amount: float
+    ts: datetime
+
+@features
+class User:
+    id: int
+    sum_transaction_amount: float
+```
+
+Then, we'll define simple online resolvers to ingest user and transaction data from a postgres database:
+
+```sql
+-- (users.chalk.sql)
+-- resolves: User
+-- source: postgres
+
+select id from users
+```
+
+```sql
+-- (transactions.chalk.sql)
+-- resolves: Transaction
+-- source: postgres
+
+select id, user_id, amount, ts from transactions
+```
+
+Next, we'll write a simple (buggy) aggregation resolver to compute the sum of a user's transactions:
+
+```python
+from chalk import online
+
+@online
+def sum_transaction_amount(txns: User.transaction[Transaction.amount]) -> User.sum_transaction_amount:
+    return txns[Transaction.amount].count() # this 'count' is a bug! we'll debug it shortly.
+```
+
+Notice that we've defined this aggregation with a bug! We're actually computing the `count` of the User's
+Transactions, rather than the `sum` of their amounts.
+
+Let's run a query --
+
+```python
+data = ChalkClient().query(input={User.id: 1}, output=[User.sum_transaction_amount])
+
+print(data.get_value(User.sum_transaction_amount))
+
+# Outputs 100!!
+```
+
+Whoops! Because we have prior knowledge of our data, we know that `100` is the wrong value for User `1`s transaction sum.
+Let's debug this issue.
 
 # Query Plan Visualizer
 
 The query plan visualizer is a tool that allows you to see the structure of a query, and also inspect the data that
 flows through it.
 
-To use the query plan visualizer, first execute an online or offline query:
+To make full use of the query plan visualizer, we can re-execute the previous query with the `store_plan_stages=True` kwarg.
+This stores all of the data that passes through each stage of the query plan.
 
 ```python
-ChalkClient.query(input={User.id: 1}, output=[User.sum_transactions])
+ChalkClient.query(input={User.id: 1}, output=[User.sum_transactions], store_plan_stages=True)
 
-# -or
-ChalkClient.offline_query(input={User.id: [1,2,3]}, output=[User.sum_transactions])
+# -or to debug multiple users at once-
+ChalkClient.offline_query(input={User.id: [1,2,3]}, output=[User.sum_transactions], store_plan_stages=True)
 ```
 
-Then, navigate to the 'Queries' tab in the web dashboard. You should see your query appear under the
-'Online' or 'Offline' depending on which kind of query you executed.
+Then, we navigate to the 'Queries' tab in the web dashboard. Our query appear under the
+'Online' or 'Offline' tab depending on which kind of query. Here we'll take a look at the online query, and we
+can see the structure of the query:
 
-Select your query to view execution details. You should see a visualization of the query plan under the "Query Plan"
-tab.
+![Query Plan Visualizer](./debuggging/query_plan_1.png)
 
-If you add the `store_plan_stages=True` kwarg to your query, Chalk will store every
-intermediate input and output of each stage of the query plan. This is very useful for debugging,
-but it will also increase the amount of data that is stored and add significant overhead to the execution, so
-it should not be used in production.
+The query plan visualizer shows us the structure of the query. Note that the `transaction` resolver is executed
+to fetch the transactions for each user, and then the `sum_transaction_amount` resolver is executed to compute
+the sum.
 
-```
-ChalkClient.query(..., store_plan_stages=True)
-```
+We can also see the data that flows through the query. Clicking on the `transaction` resolver shows us the output
+of the resolver:
 
-The query plan visualizer UI displays the first 20 rows of each stage of the query plan. If you want to see more,
-click "Download data" to download the raw parquet file.
+![Transaction Output](./debuggging/query_plan_2.png)
+
+Notice that the sum of the transaction amounts is definitely not `100`! By inspecting the `transaction.amount` column
+we notice that the sum should be much larger. If we were paying attention, we'd probably notice that our (incorrect) output
+`100` happens to be identical to the `count` summary of the transaction resolver, which would be a good hint that
+our aggregation is actually computing the `count` of the transactions, rather than the `sum` of their amounts.
+
+However, if we're having a slow day and don't notice that the aggregation happens to match the count, we have more
+tools we can use to debug. The next section will walk through how to execute the aggregation locally using
+the raw input data so we can use a debugger.
+
+(Note: the query plan visualizer UI displays the first 20 rows of each stage of the query plan in the preview areas.
+If you want to see more, click "Download data" to download the raw parquet file.)
 
 # Resolver Replay
 
@@ -53,14 +129,15 @@ Example:
 ```python
 from chalk import ChalkClient
 
-@online
-def sum_transactions(txns: User.transactions[Transaction.amount]) -> User.sum_transactions:
-    return txns[Transaction.amount].sum()
-
 ChalkClient().offline_query(
-    input={User.id: [1,2,3]},
+    input={User.id: [1]},
     output=[User.sum_transactions],
     store_plan_stages=True,
     recompute_features=True
-).resolver_replay(sum_transactions)
+).resolver_replay(sum_transaction_amount)
 ```
+
+This will execute the resolver locally, using the same input data that was used in the query. This allows you to debug
+using your IDE (vscode, pycharm, or even pdb):
+
+![Debugger](./debuggging/debugging.png)
