fix name typo for query http response metrics export docs

--- a/metricexport.mdx
+++ b/metricexport.mdx
@@ -188,7 +188,7 @@ A gauge of this kind is sometimes called an <code>Info</code> metric.
 
 </Attribute>
 
-<Attribute field={'query_latency_seconds'} kind={'Gauge'}>
+<Attribute field={'query_http_response'} kind={'Gauge'}>
 The response counts by HTTP response code.
 
 <SubAttributeTable title={'Tags'}>
