Update header depth

--- a/debugging-queries.mdx
+++ b/debugging-queries.mdx
@@ -150,7 +150,7 @@ using your IDE (vscode, pycharm, or even pdb):
 You can edit the definition of the resolver locally, and re-run `resolver_replay` to see the results of your changes
 in your terminal or by stepping through with a debugger.
 
-# Using logs to debug
+## Using logs to debug
 
 If you're not able to use the query plan visualizer or resolver replay, you can also use the logs to debug your query.
 Use the `chalk_logger` from the `chalk.clogging` just like a standard python logger. This logger will output
