--- a/resolver-inputs.mdx
+++ b/resolver-inputs.mdx
@@ -13,8 +13,8 @@ arguments to the resolver function.
 
 ## Scalar dependencies
 
-To depend on a feature from a [Feature Set](/docs/features),
-you give your resolver an argument with that feature as the type.
+To depend on features from a [Feature Set](/docs/features),
+label your resolvers argument with your features as the types.
 You can then use that argument in the body of your resolver to
 compute your [output features](/docs/resolver-outputs).
 If you're running our [editor plugin](/docs/editor-setup),
