--- a/resolver-outputs.mdx
+++ b/resolver-outputs.mdx
@@ -149,3 +149,35 @@ def get_all_users() -> DataFrame[User]:
         )
     ])
 ```
+
+### Other DataFrame-returning resolvers
+
+Imagine a scalar feature you'd like to backfill over many thousands of pkeys and historical times.
+`DataFrame`-returning resolvers can dramatically reduce the computation time due to its vectorized handling.
+
+```py
+@offline
+def get_new_feature_as_dataframe(
+    df: DataFrame[Transaction.id, ...]
+) -> DataFrame[Transaction.id, Transaction.new_feature]:
+```
+
+The above resolver runs faster on a thousand rows
+than the equivalent scalar resolver ran a thousand times.
+
+Chalk also supports relationship-returning resolvers that enable users to
+return a `DataFrame` belonging to a has-many relationship.
+
+```py
+@offline
+def relationship_returning_resolver(
+    df: User.transactions[Transaction.id, Transaction.amount, Transaction.description],
+    user_type: User.type
+) -> User.transactions[Transaction.id, Transaction.transaction_type]:
+```
+
+Just make sure that the return `DataFrame`s do not have duplicate rows.
+That means no two rows should have the same primary key, or primary key & timestamp combinations if the
+feature time is also returned.
+
+
