--- a/time.mdx
+++ b/time.mdx
@@ -124,10 +124,10 @@ id, age, <= 2022-01-02
 output: 6
 ```
 
-### `Now`: Explicitly time-dependent resolvers
+### Now: Explicitly time-dependent resolvers
 
 Chalk supports resolvers that are explicitly time-dependent. This is useful for performing backfills which
-compute values that depend on values that are semantically similar to `datetime.now()`.
+compute values that depend on timestamps that are semantically similar to `datetime.now()`.
 
 You can express time-dependency by declaring a dependency on a special feature called `Now`,
 which gets converted into a `datetime` within resolvers:
