Update architecture doc

--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -2,7 +2,7 @@
 title: AWS Cloud Deployment IAM Requirements
 ---
 
-import { ArchitectureDiagram, ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
+import { ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
 
 
 ## Background
