--- a/deployment.mdx
+++ b/deployment.mdx
@@ -4,7 +4,7 @@ description: Enterprise Deployment Model
 published: true
 ---
 
-import { EnterpriseServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
+import { ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
 
 ---
 
@@ -26,7 +26,7 @@ There are a few main components of a Chalk deployment:
 
 These components are organized as follows:
 
-<EnterpriseServiceDiagramSwitcher />
+<ServiceDiagramSwitcher />
 
 ## Data Isolation
 
