--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -2,7 +2,7 @@
 title: GCP Cloud Deployment IAM Requirements
 ---
 
-import { ArchitectureDiagram, ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
+import { ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
 
 
 ## Background
