--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -880,9 +880,9 @@ vpcaccess.locations.list
 vpcaccess.operations.get
 ```
 
-### Bigquery Offline Storage
+### BigQuery Offline Storage
 
-For Bigquery offline storage, Chalk requires the following provisioning permissions:
+For BigQuery offline storage, Chalk requires the following provisioning permissions:
 
 ```txt
 bigquery.config.update
