--- a/has-one.mdx
+++ b/has-one.mdx
@@ -16,12 +16,35 @@ One-to-one relationships are specified via the function
 `has_one`, where the first argument specifies a function returning
 how to join the tables.
 
-## Example
+##Recommended Implementation
+
+Specified below is the simplest way to demonstrate a join.
+
+```py
+from chalk.features import features
+
+@features
+class Profile:
+    ...
+    user_id: str
+    email_age_years: float
+
+@features
+class User:
+    ...
+    uid: Profile.user_id
+    profile: Profile
+```
+
+This specifies that `User.uid` is of type `str` and `User.profile` is a has-one feature
+through the join `User.uid == Profile.user_id`.
+
+The above is equivalent to the following, where the join is explicity specified.
 
 In the example below, users have an associated profile:
 
 ```py
-from chalk.features import has_one, ...
+from chalk.features import features, has_one, ...
 
 @features
 class Profile:
@@ -39,6 +62,25 @@ class User:
 <TipInfo>
   The `lambda` solves forward references, letting you reference `User` before it is defined.
 </TipInfo>
+
+You can also reference the join from the foreign feature class, if you prefer.
+The following is equivalent to the two examples above.
+
+```py
+from chalk.features import features
+
+@features
+class Profile:
+    ...
+    user_id: "User.uid"
+    email_age_years: float
+
+@features
+class User:
+    ...
+    uid: str
+    profile: Profile
+```
 
 Now, you can reference features on `Profile` through `User`. For example:
 
